Fixed keyboard, css and spotlight shifting issues found in SimpleIntegerPicker(IOS)

--- a/src/SimpleIntegerPicker/SimpleIntegerPicker.less
+++ b/src/SimpleIntegerPicker/SimpleIntegerPicker.less
@@ -96,6 +96,10 @@
 			background: @moon-white;
 			border-color: @moon-spotlight-border-color;
 
+			.moon-scroll-picker-repeater > * {
+				background: @moon-white;
+			}
+
 			.moon-scroll-picker {
 				height: @picker-height;
 				color: @moon-accent;
